--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="content_background">#f7f7f7</color>
+    <color name="milk_white">#FCFCFC</color>
+    <color name="transparent_dark_gray">#68323232</color>
 </resources>
