--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,4 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <group
+        android:checkableBehavior="single"
+        android:title="Home items">
+
+        <item
+            android:id="@+id/nav_showcase"
+            android:icon="@drawable/abc_ic_go_search_api_material"
+            android:title="@string/showcase_title" />
+
+        <item
+            android:id="@+id/nav_news"
+            android:icon="@drawable/abc_ic_go_search_api_material"
+            android:title="@string/news_title" />
+
+        <item
+            android:id="@+id/nav_trending"
+            android:checked="true"
+            android:icon="@drawable/abc_ic_go_search_api_material"
+            android:title="@string/trending_title" />
+
+        <item
+            android:id="@+id/nav_notification"
+            android:icon="@drawable/abc_ic_go_search_api_material"
+            android:title="@string/notification_title"
+            app:actionLayout="@layout/unread_notice"/>
+
+        <item
+            android:id="@+id/nav_star"
+            android:icon="@drawable/abc_ic_go_search_api_material"
+            android:title="@string/star_title" />
+
+    </group>
+
+    <item android:title="Sub items">
+
+        <menu>
+
+            <item
+                android:id="@+id/sub_exit"
+                android:icon="@drawable/abc_ic_go_search_api_material"
+                android:title="Sign out" />
+
+            <item
+                android:id="@+id/sub_about"
+                android:icon="@drawable/abc_ic_go_search_api_material"
+                android:title="About" />
+        </menu>
+    </item>
+
 
 </menu>
