--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="toolbar_and_status_height">71dp</dimen>
     <dimen name="system_ui_height">25dp</dimen>
 </resources>
